src/global.scss
// http://ionicframework.com/docs/theming/
@import '~@ionic/angular/css/core.css';
@import '~@ionic/angular/css/normalize.css';
@import '~@ionic/angular/css/structure.css';
@import '~@ionic/angular/css/typography.css';

@import '~@ionic/angular/css/padding.css';
@import '~@ionic/angular/css/float-elements.css';
@import '~@ionic/angular/css/text-alignment.css';
@import '~@ionic/angular/css/text-transformation.css';
@import '~@ionic/angular/css/flex-utils.css';

:root {
  --font-size-label: 10pt;
  --font-size-button: 10pt;

  --color-gray: #ccc;
  --color-gray-dark: #a5a5a5;
  --color-gray-text: #777;

  font-size: 10pt;
}


//
// background
//
.blue-bg {
  --background: linear-gradient(#003366, #002243) !important;
  background-size: cover;
}

// styles
.width-100 {
  width: 100%;
}
.height-100 {
  height: 100%;
}


.container {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
}

.flex-row {
  display: flex;
}
.flex-c-row {
  display: flex;
  align-items: center;
}
.flex-column {
  display: flex;
  flex-direction: column;
}

.flex-fill {
  flex: 1;
}

.match-parent {
  width: 100%;
  height: 100%;
}
.full-width {
  width: 100%;
}

.nm-center {
  align-self: center;
  justify-content: center !important;
  text-align: center;
}

.nm-center-items {
  justify-content: center !important;
  text-align: center;
  align-items: center;
}

// buttons
ion-button[full] {
  width: 100%;
}
ion-button[square] {
  --border-radius: 0;
}
ion-button[no-border] {
  --border-width: 0;
}

.dv-segment {
  background-color: var(--ion-color-primary);
  border-top: 1px var(--ion-color-secondary) solid;

  ion-button {
    flex: 1;
    margin: 0;

    &:not(:last-child) {
      border-right: 1px var(--ion-color-secondary) solid;
    }
  }
}
.dv-segment-wrapper {
  background-color: var(--ion-color-primary);
}

// disabled
.inactive {
  opacity: 0.6;
}

.round {
  border-radius: 300px !important;
  overflow: hidden;
}

// prevent button uppercase
ion-button {
  text-transform: none;
}

//
// shadow
//
.with-shadow {
  box-shadow: 0 3px 30px var(--ion-color-primary);
}

//
// margin
//
.m-0 {
  margin: 0;
}
.mb-6 {
  margin-bottom: 6px;
}
.mb-10 {
  margin-bottom: 10px;
}
.mb-14 {
  margin-bottom: 14px;
}
.mt-0 {
  margin-top: 0 !important;
}
.mt-4 {
  margin-top: 4px;
}
.mt-6 {
  margin-top: 6px;
}
.mt-8 {
  margin-top: 8px;
}
.mt-10 {
  margin-top: 10px;
}
.mt-14 {
  margin-top: 14px;
}

//
// separator
//
.dv-separator {
  width: 100%;
  height: 1px;
  background-color: var(--color-gray);
}

//
// popover
//
ion-popover {
  --width: auto !important;
  --ion-safe-area-right: 16px;

  .popover-content {
    background: transparent !important;
    margin-top: -14px;
  }

  .popover-arrow {
    display: none !important;
  }
}

// ion item
ion-item.no-padding {
  --padding-start: 0;
  --padding-end: 0;
}

.dv-item {
  margin-top: 10px;
  font-weight: 600;
  font-size: 11pt;

  display: flex;
  justify-content: space-between;

  span:first-child {
    color: var(--color-gray-dark);
    margin-right: 16px;
  }

  span:last-child {
    text-align: right;
  }
}


// user photo
.img-user {
  background: #cccccc;
}

.dv-no-list-item {
  padding: 48px;
  justify-content: center;
  color: gray;
}
.dv-no-list-item-small {
  padding: 24px;
  justify-content: center;
  color: gray;
}

.spn-loading {
  display: block;
  margin: 40px auto;
  width: 20px;
  height: 20px;
}

ion-thumbnail {
  background: var(--ion-color-light);
}

//
// input
//
.ip-item {
  background: transparent;
  width: 100%;
  border: none;
  outline: none;

  padding: 10px;
}

.grayed {
  color : var(--color-gray);
}

